Documentation edits made through Mintlify web editor

--- a/the-platform/workflows/building-flows.mdx
+++ b/the-platform/workflows/building-flows.mdx
@@ -3,6 +3,8 @@ title: "Building Workflows"
 description: "Structuring workflows using nodes, decision triggers, and best practices"
 ---
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/VXcc-rE_3sw?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Workflow builder" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ## Overview
 
 Building an effective AI-powered workflow in Plura requires structuring nodes, defining logic, and continuously refining interactions. Every workflow begins with a **Start Trigger**, which marks the entry point for all conversations. From there, nodes are connected using **Decision Triggers**, forming a structured conversational path. Additional components, such as **Universal Prompts** and **Global Nodes**, provide overarching guidance to maintain consistency and fluidity throughout the interaction.
@@ -45,6 +47,8 @@ Both **Universal Prompts** and **Global Nodes** enhance the AI’s flexibility b
 
 ## **Testing & Refining With the Test Bench**
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/6RmbqCJkq2Q?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Testing Your Nodes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ### **Overview of the Test Bench**
 
 The **Test Bench** is a vital tool for validating workflow functionality by simulating AI interactions through **chat or voice calls**. It allows developers to analyze AI decision-making and response accuracy in real-time. Testing workflows before deployment ensures they perform as expected and handle diverse user interactions effectively.
@@ -80,6 +84,8 @@ Fine-Tuning adjustments are stored within the **Behavior Refinement** section of
 
 ## **Accelerating Node Creation With the Node Wizard**
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/JQZiv5ONrUU?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Node Wizard" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 The **Node Wizard** simplifies the node-building process by automatically generating configurations based on minimal input. It allows users to quickly create functional nodes without manually configuring each section.
 
 - Quickly set up **Response Prompts**, **Stay Conditions**, **Data Extraction**, and **Node Naming**.
@@ -94,6 +100,8 @@ The **Node Wizard** simplifies the node-building process by automatically genera
 This tool is particularly useful for **rapid development and iteration**, helping users create functional nodes efficiently before fine-tuning details. By leveraging the Node Wizard, developers can quickly construct complex workflows while maintaining precision and adaptability.
 
 ## **Optimizing Performance With Analytics Mode**
+
+<iframe width="720" height="405" src="https://www.youtube.com/embed/CCJyG2oETcY?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Node Analytics Overview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
 
 The **Analytics Mode** provides **real-world data insights** into workflow performance, helping users refine nodes for efficiency and effectiveness. With **data-driven analysis**, users can adjust their workflows to enhance success rates and overall AI performance.
 
