--- a/the-platform/workflows/nodes/api-call-node.mdx
+++ b/the-platform/workflows/nodes/api-call-node.mdx
@@ -3,6 +3,8 @@ title: "API Call Node"
 description: "Connects with external APIs to send and retrieve data"
 ---
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/dKFwnt3ICik?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="API Call Node" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ## Overview
 
 The **API Call Node** is unique in that it does not include a **Response Setup** section like other nodes. Instead, its primary function is to **send API requests** and optionally process the returned data for use within the workflow.
