--- a/the-platform/workflows/nodes/transfer-call-node.mdx
+++ b/the-platform/workflows/nodes/transfer-call-node.mdx
@@ -3,6 +3,8 @@ title: "Transfer Call Node"
 description: "Redirects the conversation to a human agent or another system"
 ---
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/qtUaut8Om18?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Transfer Call Node" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ## Overview
 
 The **Transfer Call Node** is used to redirect an ongoing call to a specified phone number. This ensures seamless call handoffs to another agent, department, or external service while marking the completion of the workflow.
