--- a/the-platform/workflows/nodes/knowledge-base-node.mdx
+++ b/the-platform/workflows/nodes/knowledge-base-node.mdx
@@ -3,6 +3,8 @@ title: "Knowledge Base Node"
 description: "Pulls information from a predefined knowledge source"
 ---
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/OpxtDJCUTEA?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Knowledge Base Node" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ## Overview
 
 The **Knowledge Base Node** functions similarly to the **AI Conversation Node**, incorporating all the standard features such as **Response Setup, Decision Triggers, Stay Condition, Data Extraction, Voice Settings, and Behavior Refinement**. However, its key distinction lies in its ability to store and reference predefined knowledge.
