Documentation edits made through Mintlify web editor

--- a/the-platform/workflows/universal-prompts.mdx
+++ b/the-platform/workflows/universal-prompts.mdx
@@ -3,6 +3,8 @@ title: "Universal Prompts"
 description: "A persistent prompt that guides AI behavior across the entire workflow"
 ---
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/uECWCmADADw?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="Universal Prompt" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ## Overview
 
 **Universal Prompts** serve as a persistent, system-wide instruction set that shapes how the AI communicates throughout the entire workflow. Unlike node-specific instructions, Universal Prompts remain active regardless of which node is currently being used. These prompts help maintain **conversation style, tone, behavior, and response constraints** across all interactions.
