Documentation edits made through Mintlify web editor

--- a/the-platform/workflows/nodes/end-call-node.mdx
+++ b/the-platform/workflows/nodes/end-call-node.mdx
@@ -3,6 +3,8 @@ title: "End Call Node"
 description: "Terminates the conversation when necessary"
 ---
 
+<iframe width="720" height="405" src="https://www.youtube.com/embed/AXZmOTkJokw?list=PL4Esdvw6Uoe2hhGH996R9_fkN32XqM0C-" title="End Call Node" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen />
+
 ## Overview
 
 Aside from the usual node configurations, the **End Call Node** does not include any additional settings. Its sole function is to **end the call and terminate the workflow** once reached. This node is typically used to ensure structured call conclusions, provide a defined exit point in a conversation, or gracefully wrap up interactions with a closing message.
