Documentation edits made through Mintlify web editor

--- a/compliance.mdx
+++ b/compliance.mdx
@@ -1,12 +1,250 @@
 ---
-title: 'Compliance'
-description: 'Compliance, Safety, and Security are Paramount'
+title: "Compliance"
+description: "Compliance, Safety, and Security are Paramount"
 ---
 
 At Plura, your privacy and security are paramount. We realize the trust your are placing in us everyday to safeguard your data. We take this responsibility very seriously. Ensuring the safety and security of your data is not just a policy; it’s a core principle that we stand by. To align with our commitment to your privacy, we are HIPAA complaint, GDPR complaint, SOC 2 Type 1, and SOC 2 Type 2 certified. Your data will always remain protected, secure, and confidential within your Plura account.
 
 ## Trust Certification
+
 Visit our [Compliance Trust Center](https://drata.com/) for the compliance certificates.
 
 ## Business Associate Agreement (BAA)
-If you require a Business Associate Agreement (BAA) or have any questions regarding our compliance, please do not hesitate to contact us at compliance@plura.ai. Our team is here to answer any questions about protecting your privacy, security and data.
+
+If you require a Business Associate Agreement (BAA) or have any questions regarding our compliance, please do not hesitate to contact us at [compliance@plura.ai](mailto:compliance@plura.ai). Our team is here to answer any questions about protecting your privacy, security and data.
+
+## TCPA Compliance Guide for Plura Users
+
+When you use Plura to contact consumers by phone call or text message—whether for sales, information, or customer service—you need to understand your legal obligations under federal law.
+
+This guide explains the **Telephone Consumer Protection Act (TCPA)** and offers general guidance on how to stay compliant when using AI-powered calling technology.
+
+> ⚠️ This is not legal advice. Consult a telecommunications attorney for guidance specific to your use case.
+
+---
+
+## 📘 What is the TCPA?
+
+The **Telephone Consumer Protection Act** is a federal law that protects consumers from unwanted robocalls, automated calls, and spam text messages. It governs when, how, and under what circumstances businesses can use automated technology to contact people.
+
+### The law includes two main prohibitions:
+
+- **The DNC Prohibition:** Prohibits sales and marketing calls/texts to numbers listed on the national Do-Not-Call Registry.
+- **The ATDS Prohibition:** Prohibits using an Automated Telephone Dialing System (ATDS) to contact cellular numbers or using a prerecorded or “artificial” voice to contact any number.
+
+### Exemptions:
+
+- **Consent Exemption:** Applies to both DNC and ATDS prohibitions.
+- **Established Business Relationship (EBR) Exemption:** Applies only to the DNC prohibition.
+
+---
+
+## Why AI Communications Fall Under the TCPA
+
+In **February 2024**, the FCC ruled that an **AI-generated voice qualifies as “artificial”** under the TCPA.\
+This means AI-voiced calls fall under the **ATDS Prohibition** — even if the conversations are real-time.\
+Calls or texts made using Plura are legally considered **“robocalls”** and must follow all TCPA rules.
+
+---
+
+## Core TCPA Requirements for AI-Powered Communications
+
+### 1. Get Proper Consent Before You Call
+
+**Consent is your best defense.**\
+The type of consent you need depends on the purpose of your communication.
+
+#### Informational Communications (Non-Marketing)
+
+Require **Prior Express Consent (PEC)** — verbal or written consent to receive calls.\
+Examples include:
+
+- Appointment reminders
+- Order confirmations
+- Account updates
+
+Dual-purpose messages (e.g., informational + promotional) are **treated as telemarketing**.
+
+#### Sales and Marketing Communications
+
+Require **Prior Express Written Consent (PEWC)** — a written, signed agreement.\
+Online forms can serve as digital signatures if they include clear disclosures such as:
+
+> “I consent to receive marketing calls or texts from [Your Company Name] using automated technology, including AI-generated voices, at the number I provided above. Consent is not a condition of purchase. Message and data rates may apply.”
+
+<Info>
+  Best Practice: Include an unchecked box for consent and explicitly mention AI use.
+</Info>
+
+### 2. Clearly Identify Your Company
+
+Every AI-powered call must include:
+
+- Your company name
+- Purpose of the call
+- Callback number or physical address
+
+Optional but recommended:
+
+> “Hello, this is Alex, your virtual assistant from Smith’s Auto Repair. I’m an AI system calling to remind you about your appointment tomorrow at 2 PM. If you’d like to speak with a human, just say ‘transfer me’ at any time.”
+
+---
+
+### 3. ⏰ Respect Calling Time Restrictions
+
+- **Federal Rule:** 8:00 AM – 9:00 PM (recipient’s local time)
+- **Example State Rule (Florida):** 8:00 AM – 8:00 PM
+
+> Always follow the most restrictive applicable rule.
+
+---
+
+### 4. 🚫 Provide Easy Opt-Out Options
+
+Consumers must be able to easily stop communications.\
+You must:
+
+- Allow immediate opt-out during any call
+- Accept opt-out keywords via text (STOP, QUIT, END, etc.)
+- Process requests within **10 business days**
+- Honor opt-outs via any reasonable method
+
+> Once opted out, add the number to your **internal DNC list.**
+
+---
+
+### 5. 🗂️ Keep Detailed Records
+
+Maintain for **at least 5 years:**
+
+- Consent agreements (date, time, method)
+- Outbound call logs
+- Opt-out requests
+- DNC scrubbing records
+- System configurations
+
+---
+
+### 6. 🎧 Disclose Recorded and Monitored Calls
+
+Some states (e.g., **California, Florida**) require **two-party consent** for recording.
+
+Best Practice:
+
+> “This AI call may be monitored or recorded for quality assurance purposes.”
+
+---
+
+## 🚫 Understanding the Do-Not-Call (DNC) Rules
+
+### The National Do-Not-Call Registry
+
+Businesses making sales calls must comply with **FTC DNC rules**.
+
+#### How to Access:
+
+1. Register at [donotcall.gov](http://donotcall.gov)
+2. Subscribe to area codes you’ll call
+3. Receive a **Subscription Account Number (SAN)**
+
+#### Frequency:
+
+Scrub your call lists **every 31 days**.
+
+#### Exemptions:
+
+You may call numbers on the National DNC if:
+
+- You have **PEWC**
+- You have an **Established Business Relationship (EBR)**
+- You’re making **purely informational calls**
+
+> Even with exemptions, you must still honor opt-out requests.
+
+---
+
+### Company-Specific Internal DNC Lists
+
+You must maintain your **own internal DNC list** for people who request no contact.
+
+Rules:
+
+- Add requests within 10 business days
+- Train staff and AI to recognize opt-outs
+- Maintain written DNC policy
+- Keep records for 5 years
+
+---
+
+### State-Specific DNC Lists
+
+11 states maintain separate DNC registries:
+
+> Colorado, Florida, Indiana, Louisiana, Massachusetts, Missouri, Oklahoma, Pennsylvania, Tennessee, Texas, Wyoming
+
+> PEWC applies as an exemption here too.
+
+---
+
+## ⚖️ Penalties for TCPA Violations
+
+Violations can lead to:
+
+- **\$500–\$1,500 per illegal call or text**
+- **Class-action lawsuits** for large-scale violations
+- **FTC fines:** Up to **\$51,744** per violation (Telemarketing Sales Rule)
+- **DNC fines:** Up to **\$43,792** per call to registered numbers
+
+---
+
+## ✅ Best Practices for AI Calling Compliance
+
+- Obtain proper consent (PEC/PEWC)
+- Identify your company and disclose AI use
+- Provide easy opt-outs
+- Maintain a written DNC policy
+- Update internal DNC lists within 10 days
+- Document all opt-outs with date and method
+- Train your team annually
+- Call only between approved hours
+
+---
+
+## 🧩 Plura Compliance Solutions
+
+Plura includes built-in features to simplify compliance:
+
+- Automatic DNC scrubbing
+- Real-time consent verification
+- Call time enforcement
+- Automated opt-out processing
+- Comprehensive call logging
+- CRM integration
+- State-specific compliance rules
+- Blacklist Alliance integration
+
+> Contact your account manager for help implementing compliance tools.
+
+---
+
+## ⚖️ Free Legal Consultation
+
+Ask your Plura account manager to schedule a **free consultation** with a TCPA attorney for personalized guidance.
+
+---
+
+## 💡 Final Thoughts
+
+TCPA compliance is **not optional** — it protects both consumers and your business.\
+Follow these core principles:
+
+1. Obtain clear written consent
+2. Respect all DNC lists
+3. Call during approved hours
+4. Identify yourself and offer easy opt-outs
+5. Keep detailed records
+
+For the latest official guidance, visit:
+
+- [FTC Telemarketing Resources](https://www.ftc.gov/business-guidance/advertising-marketing/telemarketing)
+- [FCC TCPA Information](https://www.fcc.gov)
