Documentation edits made through Mintlify web editor

--- a/compliance.mdx
+++ b/compliance.mdx
@@ -23,7 +23,7 @@ This guide explains the **Telephone Consumer Protection Act (TCPA)** and offers 
 
 ---
 
-## 📘 What is the TCPA?
+## What is the TCPA?
 
 The **Telephone Consumer Protection Act** is a federal law that protects consumers from unwanted robocalls, automated calls, and spam text messages. It governs when, how, and under what circumstances businesses can use automated technology to contact people.
 
