Documentation edits made through Mintlify web editor

--- a/compliance.mdx
+++ b/compliance.mdx
@@ -41,9 +41,7 @@ The **Telephone Consumer Protection Act** is a federal law that protects consume
 
 ## Why AI Communications Fall Under the TCPA
 
-In **February 2024**, the FCC ruled that an **AI-generated voice qualifies as “artificial”** under the TCPA.\
-This means AI-voiced calls fall under the **ATDS Prohibition** — even if the conversations are real-time.\
-Calls or texts made using Plura are legally considered **“robocalls”** and must follow all TCPA rules.
+In **February 2024**, the FCC ruled that an **AI-generated voice qualifies as “artificial”** under the TCPA. This means AI-voiced calls fall under the **ATDS Prohibition** — even if the conversations are real-time. Calls or texts made using Plura are legally considered **“robocalls”** and must follow all TCPA rules.
 
 ---
 
@@ -90,7 +88,7 @@ Optional but recommended:
 
 ---
 
-### 3. ⏰ Respect Calling Time Restrictions
+### 3. Respect Calling Time Restrictions
 
 - **Federal Rule:** 8:00 AM – 9:00 PM (recipient’s local time)
 - **Example State Rule (Florida):** 8:00 AM – 8:00 PM
@@ -99,7 +97,7 @@ Optional but recommended:
 
 ---
 
-### 4. 🚫 Provide Easy Opt-Out Options
+### 4. Provide Easy Opt-Out Options
 
 Consumers must be able to easily stop communications.\
 You must:
@@ -113,7 +111,7 @@ You must:
 
 ---
 
-### 5. 🗂️ Keep Detailed Records
+### 5. Keep Detailed Records
 
 Maintain for **at least 5 years:**
 
@@ -125,7 +123,7 @@ Maintain for **at least 5 years:**
 
 ---
 
-### 6. 🎧 Disclose Recorded and Monitored Calls
+### 6. Disclose Recorded and Monitored Calls
 
 Some states (e.g., **California, Florida**) require **two-party consent** for recording.
 
@@ -135,7 +133,7 @@ Best Practice:
 
 ---
 
-## 🚫 Understanding the Do-Not-Call (DNC) Rules
+## Understanding the Do-Not-Call (DNC) Rules
 
 ### The National Do-Not-Call Registry
 
@@ -186,7 +184,7 @@ Rules:
 
 ---
 
-## ⚖️ Penalties for TCPA Violations
+## Penalties for TCPA Violations
 
 Violations can lead to:
 
@@ -197,7 +195,7 @@ Violations can lead to:
 
 ---
 
-## ✅ Best Practices for AI Calling Compliance
+## Best Practices for AI Calling Compliance
 
 - Obtain proper consent (PEC/PEWC)
 - Identify your company and disclose AI use
@@ -210,7 +208,7 @@ Violations can lead to:
 
 ---
 
-## 🧩 Plura Compliance Solutions
+## Plura Compliance Solutions
 
 Plura includes built-in features to simplify compliance:
 
@@ -225,15 +223,13 @@ Plura includes built-in features to simplify compliance:
 
 > Contact your account manager for help implementing compliance tools.
 
----
-
-## ⚖️ Free Legal Consultation
+## Free Legal Consultation
 
 Ask your Plura account manager to schedule a **free consultation** with a TCPA attorney for personalized guidance.
 
 ---
 
-## 💡 Final Thoughts
+## Final Thoughts
 
 TCPA compliance is **not optional** — it protects both consumers and your business.\
 Follow these core principles:
